@@ -1,6 +1,15 @@
 Changes file for Business-OnlinePayment-CashCow
 
-$Id: Changes,v 1.3 2005-08-06 17:02:15 jonasbn Exp $
+$Id: Changes,v 1.4 2005-08-09 08:38:29 jonasbn Exp $
+
+Tue Aug  9 2005 (jonasbn)
+
+- Cleaned the code some more
+
+- All unit-tests pass and the Net::SSLeay warning seems to have gone away
+  moved some caveat bullets to the TODO list instead
+
+- Cleared out unecessary referer handling
 
 Sat Aug  6 2005 (jonasbn)
 
